--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -592,3 +592,4 @@ $(document).ready(function() {
 }
 </style>
 <center>{% if product.metafields.kudobuzz.review_count > 0 %}<div itemscope itemtype="http://schema.org/Product" ><span itemprop="name"><b>{{product.title}}</b></span><div itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating">  <u>Rated:</u> <span itemprop="ratingValue">{{product.metafields.kudobuzz.review_rating}}</span> / 5  based on <span itemprop="reviewCount">{{product.metafields.kudobuzz.review_count}}</span> customer reviews </div></div>{% endif %}</center>
+{{ 'product-responsive.js' | shopify_asset_url | script_tag }}
