--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -128,7 +128,7 @@
             <h1 itemprop="name" class="main-title">{{ product.title }} </h1>
 
             <!-- Price -->
-            <div id="product-prices" class="product--prices" itemprop="offers" itemscope itemtype="http://schema.org/Offer" class="skbx-hide-xxx">
+            <div class="product--prices" itemprop="offers" itemscope itemtype="http://schema.org/Offer" class="skbx-hide-xxx">
               <meta itemprop="priceCurrency" content="{{ shop.currency }}">
               {% if product.available %}
               <link itemprop="availability" href="http://schema.org/InStock">
@@ -136,7 +136,7 @@
               <link itemprop="availability" href="http://schema.org/OutOfStock">
               {% endif %}
 
-              <p id="product-price" class="skbx-hide-x">
+              <p class="skbx-hide-x">
                 {% if product.compare_at_price > product.price %}
                 <span class="product-price on-sale" itemprop="price">{{ product.price | money }}</span>&nbsp;<span class="product-compare-price">{{ product.compare_at_price_max | money }}</span>
                 {% else %}
@@ -144,7 +144,7 @@
                 {% endif %}
               </p>
 
-              <div id="product-price" class="skbx-show-x">
+              <div class="skbx-show-x">
                 <div class="internationalPrice" id="skybox-product-price-{{product.id}}"></div>
               </div>
 
@@ -170,11 +170,6 @@
             <div class="product--reviews">
               <span class="rateit k_product_rating" id="{{ product.id }}"></span>
             </div>
-
-            <!-- Buy Button -->
-            <button type="submit" name="add" id="add" class="btn product--submit">
-              <span id="addText">{{ 'products.product.add_to_cart' | t }}</span>
-            </button>
 
             <!-- Options -->
             <div class="product--options">
@@ -275,6 +270,11 @@
                 {% endcomment %}
               </div>
             </div>
+
+            <!-- Buy Button -->
+            <button type="submit" name="add" id="add" class="btn product--submit">
+              <span id="addText">{{ 'products.product.add_to_cart' | t }}</span>
+            </button>
 
             <!-- Info -->
             <div class="product--info">
@@ -582,14 +582,5 @@ $(document).ready(function() {
     margin: 0;
   }
 </style>
-<style>
-@media only screen and (max-width: 480px) {
-  /* Overrides */
-  #product-content .select-wrappers .swatch {
-    float: none;
-    width: auto;
-  }
-}
-</style>
 <center>{% if product.metafields.kudobuzz.review_count > 0 %}<div itemscope itemtype="http://schema.org/Product" ><span itemprop="name"><b>{{product.title}}</b></span><div itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating">  <u>Rated:</u> <span itemprop="ratingValue">{{product.metafields.kudobuzz.review_rating}}</span> / 5  based on <span itemprop="reviewCount">{{product.metafields.kudobuzz.review_count}}</span> customer reviews </div></div>{% endif %}</center>
-{{ 'product-responsive.js' | shopify_asset_url | script_tag }}
+{{ 'product-responsive.js' | asset_url | script_tag }}
