--- a/assets/product-responsive.scss
+++ b/assets/product-responsive.scss
@@ -27,7 +27,11 @@
       display: flex;
       flex-direction: column;
       flex: 1 1 45%;
-      padding: 0 10px;
+      padding: 0 20px;
+    }
+
+    div.product--details {
+      padding-right: 0;
     }
 
     & div.product--nav, & > h1 {
@@ -67,7 +71,7 @@
       font-size: 12px;
       text-transform: uppercase;
     }
-    
+
     .header {
       font-size: 12px;
       text-transform: uppercase;
@@ -98,11 +102,42 @@
     font-size: 18px;
   }
 
+  &--security {
+    display: flex;
+    align-items: center;
+  }
+
   &--share {
-    margin-top: 70px;
+    padding-left: 10px;
 
     &__mobile {
       display: none;
+    }
+  }
+}
+
+.tabs {
+  &__full {
+    .tabs--item {
+      text-align: center;
+    }
+  }
+
+  &--wrapper {
+    display: flex;
+    align-items: stretch;
+  }
+
+  &--item {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 7px;
+    font-size: 16px;
+
+    &.Additional, &.Lifetime {
+      flex: 2;
     }
   }
 }
@@ -140,6 +175,14 @@
 
 [data-title="Description"] {
   display: none;
+}
+
+.rte div.tabs--wrapper {
+  margin-bottom: 0;
+}
+
+.social-sharing a {
+  margin-right: 0;
 }
 
 /* responsive width for thumbs */
